--- a/快速排序.md
+++ b/快速排序.md
@@ -1,8 +1,96 @@
 # 快速排序
 
+### **核心思想：分治**---辅助函数partition（）
+
 ### 普通的快速排序
 
 首先选择数组中的一个元素，比如用 l 索引指向最左边的元素v，逐渐遍历数组所有位于l左边的元素，在遍历的过程中，我们将逐渐整理出小于v的元素和大于v的元素，当然我们继续用一个索引j来记录小于v和大于v的分界点，然后我们当前访问的元素索引为i。
+
+![](<https://img-blog.csdn.net/20180605194839170?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+那么i怎么处理呢？很简单当i指向的元素e大于v的时候，直接包含进大于v的部分中，像这样：
+
+![](<https://img-blog.csdn.net/20180605195518856?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+然后我们继续讨论下一个元素，此时i++，如图：
+
+![](<https://img-blog.csdn.net/20180605195706826?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+如果元素e小于v的时候怎么做呢？只需要把元素e（arr[i]）和橙色部分之后的一个元素（arr[j+1]）交换就可以了，交换后索引j++。或者是先进行j++，后交换arr[i]和arr[j]。如图：
+
+![](<https://img-blog.csdn.net/20180605200240309?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+![](<https://img-blog.csdn.net/20180605200401481?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+最后i继续往后走，到最后的时候就直接将数组分成了等于v，小于v，大于v的三部分。
+
+最后将l位置和j位置交换，就实现了快速排序的子过程，如图：
+
+![](<https://img-blog.csdn.net/2018060520064391?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+```java
+import java.util.*;
+
+public class QuickSort {
+
+    // 我们的算法类不允许产生任何实例
+    private QuickSort(){}
+
+    // 对arr[l...r]部分进行partition操作
+    // 返回p, 使得arr[l...p-1] < arr[p] ; arr[p+1...r] > arr[p]
+    private static int partition(Comparable[] arr, int l, int r){
+
+        // 随机在arr[l...r]的范围中, 选择一个数值作为标定点pivot
+        swap( arr, l , (int)(Math.random()*(r-l+1))+l );
+
+        Comparable v = arr[l];
+
+        int j = l; // arr[l+1...j] < v ; arr[j+1...i) > v
+        for( int i = l + 1 ; i <= r ; i ++ )
+            if( arr[i].compareTo(v) < 0 ){
+                swap(arr, j+1, i);
+                j ++;
+            }
+
+        swap(arr, l, j); //最后在把pivot交换到分界点
+
+        return j;   //此时j所指的就是pivot，返回pivot所在的index
+    }
+    
+
+    // 递归使用快速排序,对arr[l...r]的范围进行排序
+    private static void sort(Comparable[] arr, int l, int r){
+        
+        int p = partition(arr, l, r); //通过调用partition函数使数组分为
+        sort(arr, l, p-1 );
+        sort(arr, p+1, r);
+    }
+
+    public static void sort(Comparable[] arr){
+
+        int n = arr.length;
+        sort(arr, 0, n-1);
+    }
+
+    private static void swap(Object[] arr, int i, int j) {
+        Object t = arr[i];
+        arr[i] = arr[j];
+        arr[j] = t;
+    }
+
+    // 测试 QuickSort
+    public static void main(String[] args) {
+
+        // Quick Sort也是一个O(nlogn)复杂度的算法
+        // 可以在1秒之内轻松处理100万数量级的数据
+        int N = 1000000;
+        Integer[] arr = SortTestHelper.generateRandomArray(N, 0, 100000);
+        SortTestHelper.testSort("bobo.algo.QuickSort", arr);
+
+        return;
+    }
+}
+```
 
 
 
@@ -12,9 +100,33 @@
 
 
 
-### 双路快排
+### 双路快排--处理很多重复元素
 
-#### 思路：把数组分为arr[l+1...i)<=v和arr（j...r] >=v两部分。(把==v的元素分散到了左右两部分)
+#### 思路：和快排不同的是，此时我们将小于v和大于v的元素放在数组的两端，那么我们将引用新的索引j的记录大于v的边界位置。
+
+如图：把数组分为arr[l+1...i-1]<v和arr[j...r] >v两部分。
+
+![](<https://img-blog.csdn.net/20180605204340579?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+i索引不断向后扫描，当i的元素小于v的时候继续向后扫描，直到碰到了某个元素大于等于v。j同理，直到碰到某个元素小于等于v。如图：
+
+![](<https://img-blog.csdn.net/20180605204754504?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+然后绿色的部分便归并到了一起，而此时只要交换i和j的位置就可以了，然后i++，j--就行了。如图：
+
+![](<https://img-blog.csdn.net/20180605205130804?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+![](<https://img-blog.csdn.net/20180605205203677?watermark/2/text/aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2tfa29yaXM=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70>)
+
+
+
+直到i和j遍历完毕，整个数组排序完成。
+
+这种优化当它遇到重复元素的时候，也能近乎将他们平分开来。
+
+
+
+#### 代码实现思路：
 
 在sort函数中进行partition函数操作，返回pivot。后进行sort(arr,l,p-1)和sort(arr,p+1,r)的递归调用。（关键是partition函数的构造。）
 
