增加了python代码

--- a/快速排序.md
+++ b/快速排序.md
@@ -92,6 +92,37 @@ public class QuickSort {
 }
 ```
 
+Python代码
+
+```python
+import random
+def QuickSort(arr):
+    n = len(arr)
+    QuickSortHelper(arr, 0, n-1)
+    return arr
+
+
+def QuickSortHelper(arr, l, r):
+    if l<r:  
+        p = partition(arr, l, r)
+        QuickSortHelper(arr, l, p - 1)
+        QuickSortHelper(arr, p + 1, r)
+
+
+def partition(arr, l, r):
+    ran = random.randint(l, r)  # 在数组中选择一个随机数作为pivot
+    arr[ran], arr[l] = arr[l], arr[ran]
+    v = arr[l] #pivotvalue
+    j = l
+    for i in range(l + 1, r+1, 1): #i从l+1移动到r
+        if (arr[i] < v):
+            arr[i], arr[j + 1] = arr[j + 1], arr[i]
+            j += 1
+    arr[l], arr[j] = arr[j], arr[l]
+    return j
+
+```
+
 
 
 快速排序虽然高效，但并不稳定，当数组中存在大量重复元素时，比如举个例子，我用模板测试归并排序和快速排序的时间，设置一个1000000的数组，数组元素在0-10之间随机取值，那么用归并需要花费0.290727s而快排需要花费171.151s，对，你没有看错。当快速排序最优的时候是o（nlgn），而此时显然退化到了o（n^2）的级别。这是为什么？
@@ -168,9 +199,9 @@ public class QuickSort2Way{
         int i = l+1,j = r;
         while(true){
             //这里的边界不能挂等号
-            while(i<=r && arr[i] < arr[l+1])
+            while(i <= r && arr[i].compareTo(v) < 0)
                 i++;  
-            while(j>= l+1 && arr[j] > arr[j-1])
+            while(j >= l+1 && arr[j].compareTo(v) > 0 )
                 j--;
             if(i>j)  //如果i超过了j的循环结束
                 break; 
@@ -183,6 +214,13 @@ public class QuickSort2Way{
     }
     //递归使用快速排序，对arr[l...r]的范围进行排序
     private static void sort(Comparable[] arr,int l,int r){
+        
+        // 对于小规模数组, 使用插入排序
+        if( r - l <= 15 ){
+            InsertionSort.sort(arr, l, r);
+            return;
+        }
+        
         //传入数组，左边界和右边界
         int p = partition(arr,l,r); //p为pivot左边<=v;右边>=v
         sort(arr,l,p-1); //继续递归调用直到将数组分为一个元素，则返回它自身
@@ -190,9 +228,54 @@ public class QuickSort2Way{
     }
     public static void sort(Comparable[] arr){
         int n = arr.length;
-        sort(arr,o,n-1);
+        sort(arr,0,n-1);
     }
 }
+
+```
+
+Python代码
+
+```python
+import random
+
+def QuickSort2Way(arr):
+    n = len(arr)
+    QuickSortHealper(arr,0,n-1)
+    return arr
+
+def QuickSortHealper(arr,l,r):
+    if l<r: #没写这个一直报bug
+        p = partition(arr, l, r)
+        QuickSortHealper(arr, l, p - 1)
+        QuickSortHealper(arr, p + 1, r)
+
+
+def partition(arr,l,r):
+    rand = randint(l,r)  # 优化，随机取标定点，以解决近乎有序的列表
+    arr[l], arr[rand] = arr[rand], arr[l]
+
+    #设置两个指针l和r
+    i = l+1
+    j = r
+    #设置pivotvalue
+    v = arr[l]
+
+    while True:
+        while(arr[i]<arr[l] and i<=r): #当arr[i]>=v时停止前进
+            i+=1
+        while(arr[j]>arr[l] and j>=l+1):
+            j-=1
+        if(i>j):
+            break
+        else:
+            # i，j都停止前进时，进行交换
+            arr[i], arr[j] = arr[j], arr[i]
+            i += 1
+            j -= 1
+    #跳出循环后
+    arr[l],arr[j]=arr[j],arr[l]
+    return j
 ```
 
 
