--- a/快速排序.md
+++ b/快速排序.md
@@ -349,4 +349,19 @@ class Solution {
         }
 }
 ```
+Python版本
+```python
+def sortColors(nums):
+    l,r,i = -1,len(nums),0
+    while(i<r):
+        if nums[i] ==0:
+            nums[i],nums[l+1]=nums[l+1],nums[i]
+            l+=1
+        if nums[i] ==2:
+            nums[i],nums[r-1]=nums[r-1],nums[i]
+            r-=1
+            i-=1
+        i+=1
+    return nums
 
+```
